fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -440,7 +440,7 @@ html {
     margin-bottom: 8rem; }
     @media only screen and (max-width: 56.25em) {
       .row:not(:last-child) {
-        margin-bottom: 6rem; } }
+        margin-bottom: 4rem; } }
   .row::after {
     content: "";
     display: table;
@@ -452,7 +452,7 @@ html {
       @media only screen and (max-width: 56.25em) {
         .row [class^="col-"]:not(:last-child) {
           margin-right: 0;
-          margin-bottom: 6rem; } }
+          margin-bottom: 4rem; } }
     @media only screen and (max-width: 56.25em) {
       .row [class^="col-"] {
         width: 100% !important; } }
@@ -554,19 +554,22 @@ html {
     color: #182130; }
 
 .section-delivered {
-  padding: 15rem 0; }
+  padding: 8rem 0; }
 
 .section-our-mission {
-  padding: 0 0 15rem 0; }
+  padding: 0 0 8rem 0; }
   @media only screen and (max-width: 56.25em) {
     .section-our-mission {
       text-align: center; } }
 
 .section-menus {
-  padding: 0 0 15rem 0; }
+  padding: 0 0 8rem 0; }
 
 .section-support {
-  padding: 0 0 15rem 0; }
+  padding: 0 0 8rem 0; }
+  @media only screen and (max-width: 56.25em) {
+    .section-support {
+      padding: 0 0 0rem 0; } }
 
 .support {
   background-image: linear-gradient(to bottom, #fafafa 10%, rgba(250, 250, 250, 0) 90%);
