--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,4 +1,3 @@
-
 // COLORS
 
 $color-primary: #3d60f6;
@@ -25,17 +24,6 @@ $color-yellow--light: #fff0da;
 $color-green--1: #36c197;
 $color-green--light: #daf0e9;
 
-
-
-
-
-
-
-
-
-
-
-
 // FONTS
 
 $font-family-main: "Nunito";
@@ -45,5 +33,5 @@ $font-family-second: "sans-serif";
 
 $grid-width: 104rem;
 $gutter-vertical: 8rem;
-$gutter-vertical-small: 6rem;
+$gutter-vertical-small: 4rem;
 $gutter-horizontal: 6rem;
